--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/profile.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ananthu Manoj | MERN Stack Developer | Portfolio showcasing my web development projects, skills, and experience.">
+    <meta name="keywords" content="Ananthu Manoj, Ananthu Portfolio, MERN Stack Developer, Web Developer, React Developer, Frontend Developer">
+    <meta name="author" content="Ananthu Manoj">
     <title>Ananthu Manoj</title>
   </head>
   <body>
