--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Ananthu Manoj | MERN Stack Developer | Portfolio showcasing my web development projects, skills, and experience.">
     <meta name="keywords" content="Ananthu Manoj, Ananthu Portfolio, MERN Stack Developer, Web Developer, React Developer, Frontend Developer">
     <meta name="author" content="Ananthu Manoj">
-    <title>Ananthu Manoj</title>
+    <title>Ananthu Manoj | MERN Stack Developer</title>
   </head>
   <body>
     <div id="root"></div>
